# PEGTL

./: .appveyor.yml  .bazelrc  .clang-format  .clang-tidy  .codecov.yml  .doozer.json  .gitignore  .travis.yml  BUILD.bazel  CMakeLists.txt  CMakeLists.txt.android  CMakeLists.txt.testing  LICENSE  Makefile  README.md  appveyor.yml  build.py  conanfile.py  pegtl-config.cmake  pegtl.cmake  pegtl.hh  premake5.lua
.cmake/: pegtl-config.cmake.in  test_filesystem.cpp.in
.conan/: build.py
.pkg-config/: pegtl.pc.in
cmake/: dummy-config.cmake.in  test_filesystem.cpp.in
doc/: 2014-Refactoring.md  Action-Reference.md  Actions-and-States.md  Advanced-Rules.md  Advanced-Topics.md  Calculator-Example.md  Changelog.md  Contrib-and-Examples.md  Control-Hooks.md  Control-Reference.md  Control-and-Debug.md  Control-and-Normal.md  Debug-Facilities.md  Development.md  Embedding.md  Errors-and-Exceptions.md  Example-Reference.md  Example-Tables.md  Extra-Reference.md  Extras-and-Examples.md  Getting-Started.md  Grammar-Analysis.md  Incremental-Input.md  Input-Anatomy.md  Input-Reference.md  Inputs-and-Parsing.md  Install-Guide.md  Installing-and-Using.md  Introduction.md  Meta-Data-and-Visit.md  Migration-Guide.md  Object-Parsing.md  Optimisation.md  Parse-Tree.md  Parser-Reference.md  Performance-Notes.md  Position-Tracking.md  README.md  Rule-Anatomy.md  Rule-Behaviour.md  (+7 more)
examples/: abnf2pegtl.cc  calculator.cc  csv1.cc  csv2.cc  double.hh  dynamic_match.cc  expression.cc  hello_world.cc  json.cc  json_build_one.cc  json_build_two.cc  json_changes.hh  json_classes.hh  json_errors.hh  json_parse.cc  json_unescape.hh  lua53_parse.cc  mmap_test.cc  modulus_match.cc  read_test.cc  s_expression.cc  s_expression_1.cc  s_expression_2.cc  string.cc  sum.cc  unescape.cc  uri_trace.cc
include/: pegtl.hh
pegtl/: action_input.hh  analyze.hh  apply_mode.hh  ascii.hh  assertions.hh  buffer_input.hh  config.hh  count_data.hh  cr_crlf_eol.hh  cr_eol.hh  crlf_eol.hh  data_parser.hh  eol.hh  eol_mode.hh  error_mode.hh  file_parser.hh  input.hh  input_error.hh  lf_crlf_eol.hh  lf_eol.hh  make.hh  marker_mode.hh  memory_input.hh  mmap_parser.hh  normal.hh  nothing.hh  parse.hh  parse_error.hh  position_info.hh  read_parser.hh  rewind_mode.hh  rules.hh  trace.hh  (+6 more)
src/example/pegtl/: BUILD.bazel  CMakeLists.txt  abnf2_errors.hpp  abnf2_record.cpp  abnf2pegtl.cc  abnf2pegtl.cpp  abnf2pegtl2.cpp  analyze.cc  analyze.cpp  ast.cpp  behaviour.cpp  calculator.cc  calculator.cpp  chomsky_hierarchy.cpp  coverage.cpp  cst.cpp  csv1.cc  csv1.cpp  csv2.cc  csv2.cpp  dispatch.cpp  double.hh  double.hpp  dynamic_match.cc  dynamic_match.cpp  expression.cc  expression.cpp  function.cpp  hello_world.cc  hello_world.cpp  indent_aware.cpp  iri.cpp  json_analyze.cc  json_analyze.cpp  json_ast.cc  json_ast.cpp  json_build.cpp  json_build_one.cc  json_build_one.cpp  json_build_two.cc  (+72 more)
src/test/: CMakeLists.txt  action_add_guard.cpp  action_add_state.cpp  action_apply0_to.cpp  action_apply_1.cpp  action_apply_2.cpp  action_apply_3.cpp  action_apply_to.cpp  action_change_action_and_state.cpp  action_change_action_and_states.cpp  action_change_control.cpp  action_change_rule.cpp  action_change_state.cpp  action_change_states.cpp  action_check_consume.cpp  action_check_depth.cpp  action_control_action.cpp  action_enable_disable.cpp  action_limit_consume.cpp  action_match_lazy.cpp  action_match_text.cpp  action_match_typed_state.cpp  apply_mode.cpp  ascii_aistring.cpp  ascii_any.cpp  ascii_astring.cpp  ascii_atomics.cpp  ascii_chars.cpp  ascii_classes.cpp  ascii_ellipsis.cpp  ascii_eol.cpp  ascii_eolf.cpp  ascii_identifier.cpp  ascii_ione.cpp  ascii_istring.cpp  ascii_keyword.cpp  ascii_many.cpp  ascii_not_ione.cpp  ascii_not_one.cpp  ascii_not_range.cpp  (+326 more)
src/test/pegtl/: CMakeLists.txt  ExecuteOnAndroid.cmake  action_add_guard.cpp  action_add_state.cpp  action_apply_1.cpp  action_apply_2.cpp  action_apply_3.cpp  action_change_action_and_state.cpp  action_change_action_and_states.cpp  action_change_control.cpp  action_change_state.cpp  action_change_states.cpp  action_control_action.cpp  action_enable.cpp  action_enable_disable.cpp  action_match.cpp  action_match_lazy.cpp  action_match_text.cpp  actions.cc  actions.cpp  actions_one.cpp  actions_three.cpp  actions_two.cpp  add_guard.cpp  analyze.cc  analyze.cpp  analyze_cycles.cpp  apply_mode.cpp  argv_input.cc  argv_input.cpp  ascii7_classes.cpp  ascii7_not_one.cpp  ascii7_not_range.cpp  ascii_atomics.cpp  ascii_chars.cpp  ascii_classes.cc  ascii_classes.cpp  ascii_eol.cc  ascii_eol.cpp  ascii_eolf.cc  (+475 more)
src/test/pegtl/data/: duseltronik.txt
unit_tests/: CMakeLists.txt  actions.cc  analyze.cc  ascii_classes.cc  ascii_eol.cc  ascii_eolf.cc  ascii_identifier.cc  ascii_istring.cc  ascii_shebang.cc  ascii_string.cc  ascii_two.cc  contrib_alphabet.cc  contrib_json.cc  contrib_raw_string.cc  contrib_to_string.cc  contrib_unescape.cc  contrib_uri.cc  control.cc  data_cstring.cc  file_cstdin.cc  file_cstream.cc  file_file.cc  file_istream.cc  file_mmap.cc  file_read.cc  internal_file_mapper.cc  internal_file_opener.cc  internal_file_reader.cc  main.hh  pegtl_string_t.cc  position.cc  result_help.hh  result_type.hh  rule_action.cc  rule_any.cc  rule_apply.cc  rule_ascii.cc  rule_at.cc  rule_at_not_one.cc  rule_at_not_range.cc  (+68 more)
unit_tests/android/: AndroidManifest.xml  README.md  build_unittest.sh  local.properties  mk_unittest.sh  run_allunittests.sh  run_unittest.sh
unit_tests/android/assets/: fail1.json  fail10.json  fail11.json  fail12.json  fail13.json  fail14.json  fail15.json  fail16.json  fail17.json  fail18.json  fail19.json  fail2.json  fail20.json  fail21.json  fail22.json  fail23.json  fail24.json  fail25.json  fail26.json  fail27.json  fail28.json  fail29.json  fail3.json  fail30.json  fail31.json  fail32.json  fail33.json  fail34.json  fail35.json  fail36.json  fail37.json  fail38.json  fail39.json  fail4.json  fail5.json  fail6.json  fail7.json  fail8.json  fail9.json  pass1.json  (+2 more)
unit_tests/android/jni/: Android.mk  Application.mk  main.cc
unit_tests/data/: README.md
(+1379 files in other folders)
