cc_binary(
    name = "abnf2pegtl",
    srcs = ["abnf2pegtl.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "analyze",
    srcs = ["analyze.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "calculator",
    srcs = ["calculator.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "chomsky_hierarchy",
    srcs = ["chomsky_hierarchy.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "csv1",
    srcs = ["csv1.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "csv2",
    srcs = ["csv2.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "dynamic_match",
    srcs = ["dynamic_match.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "expression",
    srcs = ["expression.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "hello_world",
    srcs = ["hello_world.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "indent_aware",
    srcs = ["indent_aware.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "iri",
    srcs = ["iri.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "json_analyze",
    srcs = ["json_analyze.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "json_ast",
    srcs = ["json_ast.cpp", "json_errors.hpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "json_build",
    srcs = ["json_build.cpp", "json_classes.hpp", "json_errors.hpp", "json_unescape.hpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "json_count",
    srcs = ["json_count.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "json_coverage",
    srcs = ["json_coverage.cpp", "json_errors.hpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "json_parse",
    srcs = ["json_parse.cpp", "json_errors.hpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "json_print_debug",
    srcs = ["json_print_debug.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "json_print_names",
    srcs = ["json_print_names.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "json_trace",
    srcs = ["json_trace.cpp", "json_errors.hpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "lua53_analyze",
    srcs = ["lua53_analyze.cpp", "lua53.hpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "lua53_parse",
    srcs = ["lua53_parse.cpp", "lua53.hpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "modulus_match",
    srcs = ["modulus_match.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "parse_tree",
    srcs = ["parse_tree.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "parse_tree_user_state",
    srcs = ["parse_tree_user_state.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "peg2pegtl",
    srcs = ["peg2pegtl.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "proto3",
    srcs = ["proto3.cpp", "proto3.hpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "random_order",
    srcs = ["random_order.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "recover",
    srcs = ["recover.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "s_expression",
    srcs = ["s_expression.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "sum",
    srcs = ["sum.cpp", "double.hpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "symbol_table",
    srcs = ["symbol_table.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "token_input",
    srcs = ["token_input.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "unescape",
    srcs = ["unescape.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "uri",
    srcs = ["uri.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "uri_print_debug",
    srcs = ["uri_print_debug.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "uri_print_names",
    srcs = ["uri_print_names.cpp"],
    deps = ["//:pegtl"],
)

cc_binary(
    name = "uri_trace",
    srcs = ["uri_trace.cpp"],
    deps = ["//:pegtl"],
)
